@@ -4,6 +4,9 @@
 Enhancements
  - [web] updated CKEditor to version 4.6.0
 
+Bug fixes
+ - [web] restore attributes when rewriting base64-encoded img tags (#3814)
+
 3.2.2 (2016-11-23)
 ------------------
 
